--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,6 @@
 @import "../bower_components/normalize-scss/_normalize.scss";
 @import "../bower_components/typeplate-starter-kit/css/_typeplate.scss";
 @import "./mixins.scss";
-
 /**
  * BOX-SIZING
  */
@@ -9,7 +8,6 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
-
 /**
  * GRIDS
  */
@@ -20,7 +18,6 @@
     font-size: 0;
     text-align: justify;
     position: relative;
-
     & > * {
         font-size: medium;
         text-align: left;
@@ -28,7 +25,6 @@
         width: 100%;
         vertical-align: top;
     }
-
     &:after {
         display: inline-block;
         width: 100%;
@@ -36,16 +32,23 @@
         font-size: medium;
     }
 }
-
 @include gridify(2, 400);
 @include gridify(4, 600);
-
 /**
  * GENERAL
  */
 
-img {max-width:100;}
-
+img {
+    max-width: 100;
+}
 body {
     transition: opacity .25s ease;
+    h1 {
+        position: absolute;
+        color:#FF8C00;
+        background-color: #2E0927;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
